force-app/main/default/objects/Glynt_Configuration__mdt/Glynt_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Glynt Configuration</label>
    <pluralLabel>Glynt Configurations</pluralLabel>
</CustomObject>