force-app/main/default/objects/Glynt_Configuration__mdt/fields/Authorization_Type__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Type__c</fullName>
    <inlineHelpText>Select Basic for User Flow, and OAuth for Machine to Machine (https://api.glynt.ai/v6/docs#auth)</inlineHelpText>
    <label>Authorization Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>OAuth</fullName>
                
                    <default>true</default>
                
                    <label>OAuth</label>
                
                </value>
            
                <value>
                
                    <fullName>Basic</fullName>
                
                
                    <label>Basic</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>