force-app/main/default/objects/Glynt_Configuration__mdt/fields/Data_Pool_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Pool_Id__c</fullName>
    <inlineHelpText>e.g. f6qD82</inlineHelpText>
    <label>Data Pool Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>