force-app/main/default/objects/Glynt_Configuration__mdt/fields/Extraction_Processor__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Processor__c</fullName>
    <inlineHelpText>Class that implements GlyntExtractionService.Processor to process completed extractions</inlineHelpText>
    <label>Extraction Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>