force-app/main/default/objects/Glynt_Configuration__mdt/fields/Extraction_Query_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Query_Timeout__c</fullName>
    <inlineHelpText>Minutes to try retrieving an extraction before timing out</inlineHelpText>
    <label>Extraction Query Timeout</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>