force-app/main/default/objects/Glynt_Configuration__mdt/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates this is the production configuration, not for use in sandboxes</inlineHelpText>
    <label>Production</label>
    <type>Checkbox</type>
</CustomField>